2022-10-30T08:20:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3354714828 # 567
* notice: last 14d: unq all: 2 25
* notice: prev accum: outdated-unq outdated-all / unq all: 225 412 / 239 438
* notice: next accum: outdated-unq outdated-all / unq all: 225 412 / 239 437
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-10-16]

2022-10-30T01:49:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3353699140 # 566
* notice: last 14d: unq all: 2 26
* notice: prev accum: outdated-unq outdated-all / unq all: 225 412 / 239 437
* notice: next accum: outdated-unq outdated-all / unq all: 225 412 / 239 438
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-10-29]

2022-10-29T16:21:54Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3352125203 # 565
* notice: last 14d: unq all: 2 25
* notice: prev accum: outdated-unq outdated-all / unq all: 224 410 / 238 435
* notice: next accum: outdated-unq outdated-all / unq all: 225 412 / 239 437
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-10-15] / [2022-10-29]

2022-10-29T08:21:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3350708542 # 564
* notice: last 14d: unq all: 2 25
* notice: prev accum: outdated-unq outdated-all / unq all: 224 410 / 238 436
* notice: next accum: outdated-unq outdated-all / unq all: 224 410 / 238 435
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-10-15]

2022-10-29T01:23:18Z: