@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-30T08:20:08Z",
+  "timestamp" : "2022-10-30T16:22:07Z",
   "count_outdated" : 412,
   "uniques_outdated" : 225,
-  "count" : 437,
-  "uniques" : 239,
+  "count" : 438,
+  "uniques" : 240,
   "clones" : [
     {
       "timestamp": "2022-10-16T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-10-29T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-30T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
