@@ -1,3 +1,11 @@
+2022-10-30T16:22:07Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3356189875 # 568
+* notice: last 14d: unq all: 2 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 225 412 / 239 437
+* notice: next accum: outdated-unq outdated-all / unq all: 225 412 / 240 438
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-30]
+
 2022-10-30T08:20:08Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3354714828 # 567
 * notice: last 14d: unq all: 2 25
